Build for production

--- a/all/index.html
+++ b/all/index.html
@@ -226,6 +226,12 @@
             <h5>Last updated Dec 24, 2017</h5>
         </div>
     </a>
+            <a href="/how-to-find-root-of-positive-number-in-javascript">
+        <div class="card card-compact">
+            <h3>How to find root of positive number in JavaScript</h3>
+            <h5>Last updated Dec 26, 2017</h5>
+        </div>
+    </a>
             <a href="/how-to-loop-backwards-through-array-in-javascript">
         <div class="card card-compact">
             <h3>How to loop backwards through array in JavaScript</h3>
@@ -298,6 +304,12 @@
             <h5>Last updated Dec 23, 2017</h5>
         </div>
     </a>
+            <a href="/how-to-get-current-timestamp-in-javascript">
+        <div class="card card-compact">
+            <h3>How to get current timestamp in JavaScript</h3>
+            <h5>Last updated Dec 26, 2017</h5>
+        </div>
+    </a>
             <a href="/how-to-find-element-by-id-in-javascript">
         <div class="card card-compact">
             <h3>How to find element by id in JavaScript</h3>
@@ -308,6 +320,12 @@
         <div class="card card-compact">
             <h3>How to define a class in JavaScript</h3>
             <h5>Last updated Dec 18, 2017</h5>
+        </div>
+    </a>
+            <a href="/how-to-convert-date-to-timestamp-in-javascript">
+        <div class="card card-compact">
+            <h3>How to convert date to timestamp in JavaScript</h3>
+            <h5>Last updated Dec 26, 2017</h5>
         </div>
     </a>
             <a href="/how-to-capitalize-first-letter-in-javascript">
@@ -344,6 +362,12 @@
         <div class="card card-compact">
             <h3>How to toggle class of element in JavaScript</h3>
             <h5>Last updated Nov 11, 2017</h5>
+        </div>
+    </a>
+            <a href="/how-to-get-current-timestamp-in-seconds-in-javascript">
+        <div class="card card-compact">
+            <h3>How to get current timestamp in seconds in JavaScript</h3>
+            <h5>Last updated Dec 26, 2017</h5>
         </div>
     </a>
             <a href="/how-to-comment-in-javascript">
