Build for production

--- a/all/index.html
+++ b/all/index.html
@@ -256,6 +256,12 @@
             <h5>Last updated Dec 21, 2017</h5>
         </div>
     </a>
+            <a href="/how-to-get-current-month-name-in-javascript">
+        <div class="card card-compact">
+            <h3>How to get current month name in JavaScript</h3>
+            <h5>Last updated Dec 29, 2017</h5>
+        </div>
+    </a>
             <a href="/how-to-decode-url-in-javascript">
         <div class="card card-compact">
             <h3>How to decode url in JavaScript</h3>
@@ -308,6 +314,12 @@
         <div class="card card-compact">
             <h3>How to get current timestamp in JavaScript</h3>
             <h5>Last updated Dec 26, 2017</h5>
+        </div>
+    </a>
+            <a href="/how-to-get-length-of-string-in-javascript">
+        <div class="card card-compact">
+            <h3>How to get length of string in JavaScript</h3>
+            <h5>Last updated Dec 29, 2017</h5>
         </div>
     </a>
             <a href="/how-to-find-element-by-id-in-javascript">
@@ -454,6 +466,12 @@
             <h5>Last updated Nov 11, 2017</h5>
         </div>
     </a>
+            <a href="/how-to-convert-date-to-mysql-format-YYYY-MM-DD-in-javascript">
+        <div class="card card-compact">
+            <h3>How to convert date to mysql format YYYY MM DD in JavaScript</h3>
+            <h5>Last updated Dec 29, 2017</h5>
+        </div>
+    </a>
             <a href="/how-to-convert-from-degree-to-radian-in-javascript">
         <div class="card card-compact">
             <h3>How to convert from degree to radian in JavaScript</h3>
@@ -526,6 +544,12 @@
             <h5>Last updated Dec 19, 2017</h5>
         </div>
     </a>
+            <a href="/how-to-get-length-of-array-in-javascript">
+        <div class="card card-compact">
+            <h3>How to get length of array in JavaScript</h3>
+            <h5>Last updated Dec 29, 2017</h5>
+        </div>
+    </a>
             <a href="/how-to-find-element-by-class-in-javascript">
         <div class="card card-compact">
             <h3>How to find element by class in JavaScript</h3>
@@ -566,6 +590,12 @@
         <div class="card card-compact">
             <h3>How to redirect to another page in JavaScript</h3>
             <h5>Last updated Dec 16, 2017</h5>
+        </div>
+    </a>
+            <a href="/how-to-get-current-day-name-in-javascript">
+        <div class="card card-compact">
+            <h3>How to get current day name in JavaScript</h3>
+            <h5>Last updated Dec 29, 2017</h5>
         </div>
     </a>
             <a href="/how-to-uppercase-every-word-in-javascript">
