Build for production

--- a/all/index.html
+++ b/all/index.html
@@ -202,6 +202,18 @@
             <h5>Last updated Dec 16, 2017</h5>
         </div>
     </a>
+            <a href="/how-to-create-logical-AND-condition-in-javascript">
+        <div class="card card-compact">
+            <h3>How to create logical AND condition in JavaScript</h3>
+            <h5>Last updated Jan 02, 2018</h5>
+        </div>
+    </a>
+            <a href="/how-to-create-logical-NOT-condition-in-javascript">
+        <div class="card card-compact">
+            <h3>How to create logical NOT condition in JavaScript</h3>
+            <h5>Last updated Jan 02, 2018</h5>
+        </div>
+    </a>
             <a href="/how-to-check-if-element-has-class-in-javascript">
         <div class="card card-compact">
             <h3>How to check if element has class in JavaScript</h3>
@@ -526,6 +538,12 @@
             <h5>Last updated Dec 16, 2017</h5>
         </div>
     </a>
+            <a href="/how-to-create-logical-OR-condition-in-javascript">
+        <div class="card card-compact">
+            <h3>How to create logical OR condition in JavaScript</h3>
+            <h5>Last updated Jan 02, 2018</h5>
+        </div>
+    </a>
             <a href="/how-to-find-multiple-DOM-elements-in-javascript">
         <div class="card card-compact">
             <h3>How to find multiple DOM elements in JavaScript</h3>
@@ -623,7 +641,7 @@
     <div class="container">
         <div class="footer-container">
             <div>
-                &copy; 2017 / Built by
+                &copy; 2018 / Built by
                 <a href="https://jadjoubran.io" target="_blank" rel="noopener">Jad Joubran</a>
                 &amp; designed by
                 <a href="https://nicolesaidy.com" target="_blank" rel="noopener">Nicole Saidy</a>
