Build for production

--- a/how-to-get-current-day-name-in-javascript/index.html
+++ b/how-to-get-current-day-name-in-javascript/index.html
@@ -83,6 +83,11 @@ Friday
 
     <h4>Related use cases</h4>
 
+        <a href="/how-to-get-current-short-day-name-in-javascript/">
+        <div class="card card-compact">
+            <h3>How to get current short day name in JavaScript</h3>
+        </div>
+    </a>
         <a href="/how-to-get-current-month-name-in-javascript/">
         <div class="card card-compact">
             <h3>How to get current month name in JavaScript</h3>
