--- a/all/index.html
+++ b/all/index.html
@@ -190,6 +190,12 @@
             <h5>Last updated Dec 21, 2017</h5>
         </div>
     </a>
+            <a href="/how-to-create-object-from-array-in-javascript">
+        <div class="card card-compact">
+            <h3>How to create object from array in JavaScript</h3>
+            <h5>Last updated Jan 04, 2018</h5>
+        </div>
+    </a>
             <a href="/how-to-destructure-with-default-value-in-javascript">
         <div class="card card-compact">
             <h3>How to destructure with default value in JavaScript</h3>
@@ -290,6 +296,12 @@
         <div class="card card-compact">
             <h3>How to deep clone an object in JavaScript</h3>
             <h5>Last updated Dec 24, 2017</h5>
+        </div>
+    </a>
+            <a href="/how-to-get-current-short-day-name-in-javascript">
+        <div class="card card-compact">
+            <h3>How to get current short day name in JavaScript</h3>
+            <h5>Last updated Jan 04, 2018</h5>
         </div>
     </a>
             <a href="/how-to-sort-array-in-descending-order-in-javascript">
@@ -574,6 +586,12 @@
             <h5>Last updated Nov 11, 2017</h5>
         </div>
     </a>
+            <a href="/how-to-get-current-short-month-name-in-javascript">
+        <div class="card card-compact">
+            <h3>How to get current short month name in JavaScript</h3>
+            <h5>Last updated Jan 04, 2018</h5>
+        </div>
+    </a>
             <a href="/how-to-uppercase-a-string-in-javascript">
         <div class="card card-compact">
             <h3>How to uppercase a string in JavaScript</h3>
@@ -590,6 +608,12 @@
         <div class="card card-compact">
             <h3>How to replace all occurrences of string in JavaScript</h3>
             <h5>Last updated Dec 16, 2017</h5>
+        </div>
+    </a>
+            <a href="/how-to-get-current-year-in-javascript">
+        <div class="card card-compact">
+            <h3>How to get current year in JavaScript</h3>
+            <h5>Last updated Jan 04, 2018</h5>
         </div>
     </a>
             <a href="/how-to-call-a-function-with-arguments-in-javascript">
