Build for production

--- a/all/index.html
+++ b/all/index.html
@@ -151,7 +151,7 @@
             <a href="/how-to-get-random-element-from-array-in-javascript">
         <div class="card card-compact">
             <h3>How to get random element from array in JavaScript</h3>
-            <h5>Last updated Dec 17, 2017</h5>
+            <h5>Last updated Jan 08, 2018</h5>
         </div>
     </a>
             <a href="/how-to-increment-a-variable-in-javascript">
@@ -230,6 +230,12 @@
         <div class="card card-compact">
             <h3>How to check if number is odd in JavaScript</h3>
             <h5>Last updated Dec 23, 2017</h5>
+        </div>
+    </a>
+            <a href="/how-to-get-random-number-between-two-numbers-in-javascript">
+        <div class="card card-compact">
+            <h3>How to get random number between two numbers in JavaScript</h3>
+            <h5>Last updated Jan 08, 2018</h5>
         </div>
     </a>
             <a href="/how-to-get-first-character-of-string-in-javascript">
@@ -410,6 +416,12 @@
         <div class="card card-compact">
             <h3>How to comment in JavaScript</h3>
             <h5>Last updated Dec 24, 2017</h5>
+        </div>
+    </a>
+            <a href="/how-to-get-count-of-duplicate-items-in-array-in-javascript">
+        <div class="card card-compact">
+            <h3>How to get count of duplicate items in array in JavaScript</h3>
+            <h5>Last updated Jan 08, 2018</h5>
         </div>
     </a>
             <a href="/how-to-create-an-object-in-javascript">
